@@ -7,7 +7,10 @@ public class GCtest {
 
     public static void main(String[] args) {
         // 测试新对象优先
-        testAllocation();
+//        testAllocation();
+
+        // 测试大对象直接进入永久代
+//        testPretenureSizeThreshold();
 
     }
 
@@ -31,5 +34,14 @@ public class GCtest {
         // 出现一次Minor GC
         allocation4 = new byte[2 * _1MB];
         allocation5 = new byte[2 * _1MB];
+    }
+
+    /**
+     * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:+UseSerialGC -XX:PretenureSizeThreshold=3145728
+     * -XX:PretenureSizeThreshold=3145728 定义大对象
+     */
+    public static void testPretenureSizeThreshold() {
+        byte[] allocation;
+        allocation = new byte[4 * _1MB];  //直接分配在老年代中
     }
 }
